# integrated-plant-protection

./: .gitignore  .stestr.conf  Dockerfile  JenkinsConstants.groovy  Jenkinsfile  LICENSE  README.md  ai4-metadata.yml  metadata.json  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: main.yml
.sqa/: config.yml  docker-compose.yml
ai4eosc_uc2/: api backup.py  api.py  config.py  data_utils.py  misc.py  models.py  paths.py  test_utils.py  train_runfile.py  utils.py
ai4eosc_uc2/tests/: test_api.py
data/: .gitignore
etc/: .gitignore  config.yaml
integrated-plant-protection/: api.py  paths.py  test_utils.py  train_runfile.py  utils.py
integrated-plant-protection/tests/: test_api.py
integrated_plant_protection/: api.py  config.py  data_utils.py  misc.py  models.py  paths.py  test_utils.py  train_runfile.py  utils.py
integrated_plant_protection/tests/: test_api.py
models/: .gitignore
preprocess_models/: .gitignore
tests/: test_api.py
