[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "integrated-plant-protection"
authors = [
    { name = "Poznańskie Centrum Superkomputerowo-Sieciowe", email = "dept-iot@man.poznan.pl" },
]
description = "A Torch model to classify plant."
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: AI/ML/DL Researchers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]
dynamic = ["version", "dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/integrated-plant-protection"
"Bug Tracker" = "https://github.com/ai4os-hub/integrated-plant-protection/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
env = [
    "INTEGRATED_PLANT_PROTECTION_DATA_PATH=tests/data",
    "INTEGRATED_PLANT_PROTECTION_MODELS_PATH=tests/models",
]
# Allow test files to share names
# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
addopts = "--import-mode=importlib"

[tool.setuptools]
packages = [ "integrated_plant_protection" ]

[tool.setuptools.package-dir]
"integrated_plant_protection" = "integrated_plant_protection"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }
version = { file = "VERSION" }

[project.entry-points."deepaas.v2.model"]
integrated_plant_protection = "integrated_plant_protection.api"