[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "integrated_plant_protection"
version = "0.2.0"
authors = [{ name = "PSNC WODR", email = "support@kiwi.psnc.pl" }]
description = "Integrated Plant Protection"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT",
]
dynamic = ["dependencies"]

[project.urls]
"Homepage" = "https://github.com/ai4os-hub/integrated-plant-protection"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["integrated_plant_protection"]

[project.entry-points."deepaas.v2.model"]
integrated_plant_protection = "integrated_plant_protection.api"
