# -*- coding: utf-8 -*-
[metadata]
name = integrated_plant_protection
summary = Integrated Plant Protection
description-file =
    README.md
author = PSNC WODR
author-email = support@kiwi.psnc.pl
version = 0.0.1
license = MIT
home-page = https://github.com/ai4eosc-psnc/integrated_plant_protection
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

[files]
packages =
    integrated_plant_protection

[entry_points]
deepaas.v2.model =
    integrated_plant_protection = integrated_plant_protection.api
